# suricata-ipc

ipc-plugin/: CMakeLists.txt
ipc-plugin/cmake/: FindSuricata.cmake
ipc-plugin/ipc-plugin-rs/: Cargo.toml  cbindgen.toml
ipc-plugin/ipc-plugin-rs/src/: lib.rs  log.rs
ipc-plugin/src/: bindings.h  plugin.c  runmode-ipc.c  runmode-ipc.h  source-ipc.c  source-ipc.h
